--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,34 @@
+appdirs==1.4.4
 asgiref==3.2.10
+astroid==2.6.2
+asttokens==2.0.5
+black==21.7b0
 click==8.0.1
+colorama==0.4.4
+commonmark==0.9.1
 Django==3.1.12
+django-doctor==2.5.0
+dparse==0.5.1
 flake8==3.9.2
+isort==5.9.2
+lazy-object-proxy==1.6.0
 mccabe==0.6.1
+mypy-extensions==0.4.3
+packaging==21.0
+pathspec==0.8.1
 poetry-semver==0.1.0
 pycodestyle==2.7.0
 pyflakes==2.3.1
+Pygments==2.9.0
+pylint==2.9.3
+pyparsing==2.4.7
 pytz==2020.1
 PyYAML==5.4.1
+regex==2021.7.6
+rich==10.6.0
+six==1.16.0
 skjold==0.3.2
 sqlparse==0.3.1
 toml==0.10.2
+tomli==1.0.4
+wrapt==1.12.1
