ru lang + fixes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,11 @@ services:
 
   # web service, frontend and backend included
   web:
+    container_name: calendar-web
     build: .  # build the docker, using the dockfile in current dir
 
-    command: python manage.py runserver 0.0.0.0:8000
+    command: >
+      sh -c "python manage.py makemigrations && python manage.py migrate && python manage.py csu && python manage.py runserver 0.0.0.0:8000"
 
     ports:
       - "8000:8000"
@@ -20,7 +22,8 @@ services:
   
 
   db:
-    image: postgres:latest
+    container_name: calendar-db
+    image: postgres:16-alpine
 
     environment:
       POSTGRES_DB: calendar_db
@@ -28,7 +31,7 @@ services:
       POSTGRES_PASSWORD: "!!UZH_CNSP24_CALENDAR!!"
 
     ports:
-      - "5432:5432"
+      - "15432:5432"
 
     volumes:
       - db_data:/var/lib/postgresql/data  # pesistantly store the data even when the docker is deleted or stopped
